assets/css/radio-table/_show/popups.css
@keyframes popup_show
{
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.popup {
    --background-color: var(--view-background-color);
    --border-color: var(--detail-border-color);
    --shadow-color: rgba(0,0,0, 0.14);

    position: fixed;
    inset: auto;
    margin: 0;
    padding: 0;

    position-area: span-left bottom;
    position-try-fallbacks: flip-inline, flip-block, flip-block flip-inline;
    margin-top: 5px;
    max-width: 500px;

    background: var(--background-color);
    border: 1px solid var(--border-color);
    border-radius: 7px;
    overflow: hidden;
    box-shadow: 0 0 10px var(--shadow-color);
    font-size: 0.8em;
    padding: 15px 20px;

    animation-name: popup_show;
    animation-duration: 0.2s;
    animation-timing-function: ease-out;
    animation-delay: 0.15s;
    animation-fill-mode: both;
}

.rds-popup dl {
    display: grid;
    grid-template-columns: min-content auto;
    gap: 10px 18px;
    margin: 5px 0;
}
.rds-popup dt {
    font-weight: bold;
}
.rds-popup dt::after {
    content: ":";
}
.rds-popup dd {
    margin-left: 0;
    margin-right: -8px;
}

.rds-popup dd span {
    display: inline;
    margin-right: 8px;

    white-space: pre;
    background: var(--radio-table-rds-text-background-color);
    font-family: "Inconsolata", "Consolas", "Source Code Pro", "Lucida Console", monospace;
}
.rds-popup dd.rds-wrap span {
    white-space: pre-wrap;
}
.rds-popup dd div + div {
    margin-top: 5px;
}

.popup-button, .popup-button:hover {
    /* reset styles from button */
    all: unset;
    background: none !important;
}
.popup-button:hover {
    cursor: pointer;
}
.popup-button:focus-visible {
    outline-offset: 3px;
    outline: 2px solid var(--focus-outline-color);
}

